[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-quality-refiner"
version = "0.1.0"
description = "Streamlit application for scoring and refining prompt quality with transformer models."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.25.0",
    "torch>=2.0.0",
    "transformers>=4.34.0",
    "safetensors>=0.4.0",
]
